# tech-challenge-fase-01

./: .gitignore  README.md  main.py  pyproject.toml
core/: security.py
data/: users.py
models/: item.py
routes/: auth.py  items.py
scraping/: fallback.py  site_collector.py
