[tool.poetry]
name = "tech-challenge-fase-01"
version = "0.1.0"
description = ""
authors = ["evandroviero <evandro.viero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
pydantic = "^2.11.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
